--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,3 +17,23 @@ body {
 *:after {
   box-sizing: inherit;
 }
+
+#__next,
+#__next > div {
+  height: 100%;
+}
+
+@keyframes float {
+  0% {
+    box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.6);
+    transform: translatey(0px);
+  }
+  50% {
+    box-shadow: 0 25px 15px 0px rgba(0, 0, 0, 0.2);
+    transform: translatey(-10px);
+  }
+  100% {
+    box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.6);
+    transform: translatey(0px);
+  }
+}
