--- a/styles/globals.css
+++ b/styles/globals.css
@@ -81,19 +81,38 @@ input:focus {
 .page-content {
   position: relative;
   color: #5d686f;
-  font-size: 1.2em;
+  font-size: 1.15em;
   line-height: 1.4em;
-  /* $nest: {
-    img: {
-      maxWidth: "100%",
-      marginTop: 20,
-      marginBottom: 20,
-      boxShadow: "0px 0px 10px #bbb !important",
-    },
-    h1: {
-      //fontSize: "1em",
-    },
-  }, */
+  width: 100%;
+}
+
+.post-content img,
+.page-content img {
+  max-width: 100%;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  box-shadow: 0px 0px 20px rgb(224, 224, 224);
+  border: 1px solid rgb(230, 229, 229);
+  text-align: center;
+}
+
+blockquote {
+  background: #f9f9f9;
+  border-left: 10px solid #ccc;
+  margin: 1.5em 10px;
+  padding: 0.5em 10px;
+  quotes: "\201C""\201D""\2018""\2019";
+}
+blockquote:before {
+  color: #ccc;
+  content: open-quote;
+  font-size: 4em;
+  line-height: 0.1em;
+  margin-right: 0.25em;
+  vertical-align: -0.4em;
+}
+blockquote p {
+  display: inline;
 }
 
 /* .post-content img {
