--- a/styles/globals.css
+++ b/styles/globals.css
@@ -96,6 +96,14 @@ input:focus {
   text-align: center;
 }
 
+.post-content iframe,
+.page-content iframe {
+  max-width: 100%;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
 blockquote {
   background: #f9f9f9;
   border-left: 10px solid #ccc;
