--- a/styles/globals.css
+++ b/styles/globals.css
@@ -101,10 +101,12 @@ input:focus {
 .markdown-content img {
   max-width: 100%;
   margin-top: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   box-shadow: 0px 0px 20px rgb(224, 224, 224);
   border: 1px solid rgb(230, 229, 229);
   text-align: center;
+  padding: 5px;
+  border-radius: 4px;
 }
 
 .markdown-content iframe {
